init with tailwind css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,80 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* DEFAULT THEME */
+
+@theme {
+  --font-RobotoCondensed: "Roboto Condensed", sans-serif;
+  --color-primary: #001529;
+  --color-error: #ff4d4f;
+  --color-base-300: #ffffff;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.loader {
+  animation: rotate 3s infinite;
+  height: 50px;
+  width: 50px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+}
+.loader:before {
+  animation: ball1 3s infinite;
+  background-color: #fff;
+  box-shadow: 30px 0 0 var(--color-primary);
+  margin-bottom: 10px;
+}
+.loader:after {
+  animation: ball2 3s infinite;
+  background-color: var(--color-primary);
+  box-shadow: 30px 0 0 #fff;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) scale(0.8);
+  }
+  50% {
+    transform: rotate(360deg) scale(1.2);
+  }
+  100% {
+    transform: rotate(720deg) scale(0.8);
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 var(--color-primary);
+  }
+  50% {
+    box-shadow: 0 0 0 var(--color-primary);
+    margin-bottom: 0;
+    transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 var(--color-primary);
+    margin-bottom: 10px;
+  }
+}
+
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 #fff;
+  }
+  50% {
+    box-shadow: 0 0 0 #fff;
+    margin-top: -20px;
+    transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #fff;
+    margin-top: 0;
+  }
 }
