--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,14 +27,14 @@
 }
 .loader:before {
   animation: ball1 3s infinite;
-  background-color: #fff;
+  background-color: var(--color-primary);
   box-shadow: 30px 0 0 var(--color-primary);
   margin-bottom: 10px;
 }
 .loader:after {
   animation: ball2 3s infinite;
   background-color: var(--color-primary);
-  box-shadow: 30px 0 0 #fff;
+  box-shadow: 30px 0 0 var(--color-primary);
 }
 
 @keyframes rotate {
@@ -66,15 +66,38 @@
 
 @keyframes ball2 {
   0% {
-    box-shadow: 30px 0 0 #fff;
+    box-shadow: 30px 0 0 var(--color-primary);
   }
   50% {
-    box-shadow: 0 0 0 #fff;
+    box-shadow: 0 0 0 var(--color-primary);
     margin-top: -20px;
     transform: translate(15px, 15px);
   }
   100% {
-    box-shadow: 30px 0 0 #fff;
+    box-shadow: 30px 0 0 var(--color-primary);
     margin-top: 0;
   }
+}
+
+/* animation */
+
+@keyframes anvil {
+  0% {
+    transform: scale(1) translateY(0px);
+    opacity: 0;
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+  }
+  1% {
+    transform: scale(0.96) translateY(10px);
+    opacity: 0;
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+  }
+  100% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+    box-shadow: 0 0 500px rgba(241, 241, 241, 0);
+  }
+}
+.popup-content {
+  -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
